<resources>
    <string name="app_name">Aman Infraventure</string>
    <string name="companyname">AMAN INFRAVENTURE"\n"PVT. LMT.</string>
    <string name="tab_text_1">About"\n"Us</string>
    <string name="tab_text_2">Live"\n"Projects</string>
    <string name="tab_text_3">Completed"\n"Projects</string>
    <string name="tab_text_4">Contact"\n"Us</string>
    <string name="tab_text_5">App"\n"Developers</string>
    <string name="englishslogan">Where dreams come home...</string>
    <string name="hindislogan">आपके सपनों का आशियाना</string>
    <string name="contactus">We are here for your service 24x7.</string>
    <string name="aboutus">We are here in this field from just a few years but we have earned your trust and sold about 250+ houses.</string>
    <string name="liveproject1">Shyam City</string>
    <string name="liveproject2">Pink City</string>
    <string name="liveproject3">Shyam Enclave 2</string>
    <string name="liveproject4">Aman Enclave</string>
    <string name="email">amaninfraventure@gmail.com</string>
    <string name="phone">+917379451999 , +919628451999 , +918853578111</string>
    <string name="place">Sanskar Tower,Beside Consumer Court,R.K. Puram, Mallhaur Road, Chinhat, Lucknow 226028</string>
    <string name="lp1">This project of Aman infraventure is present in the growing and developing area near Amity University. It is a 100 Housing Colony. We are making this project as a city and will provide you with many additional facilities.</string>
    <string name="lp1address">1.5 KMS from Amity University Gate No. 3, Hasemau Lucknow.</string>
    <string name="lp2">This is a newly built site started in the mid of 2014. This site has total area 30,000 Sqrft(excluding road).This site is almost completed and 80% of the units are sold. Hurry up for possession.This site is 500 mtrs from AMITY UNIVERSITY.</string>
    <string name="lp2address">200 MS from New Amity University Railway Crossing</string>
    <string name="lp3">This is a newly built site started in the mid of 2016. This site has total area 30,000 Sqrft.This site is 2kms from \'Matihari Chauraha\' at Deva Road.It is one of the developing areas and has bright future in terms of investment and residence.</string>
    <string name="lp3address">2.5 KMS from Matihari Tiraha towards Industrial area ,infront of Jashn Lawn</string>
    <string name="lp4">This site is started in the mid of 2016. This is a combination of two site which include 15 houses.This site is in touch with Gomtinagar (almost 750mtrs away).It is one of the most developing area and have bright future in terms of investment and residence.</string>
    <string name="lp4address">Behind LPS BOYS HOSTEL Gomtinagar, behind Consumer Court Mallhaur Road, Chinhat, Lucknow</string>
    <string name="devname1">Developer Name 1</string>
    <string name="devname2">Developer Name 2</string>
    <string name="customer1msg">We have bought our home from him in 2012.We feel happy and thankful to be part of this big Family.</string>
    <string name="customer1name">Mr. Raman Kumar Gupta</string>
    <string name="customer1num">+919559778786</string>
    <string name="customer2msg">Shyam ji is a good and reputed builder.we have bought our home in 2011.</string>
    <string name="customer2name">Mr. K P Tiwari</string>
    <string name="customer2num">+91925366258</string>
    <string name="customer3msg">We got our first home in luckow from Shyam ji .We have trusted him and you can trust him too.</string>
    <string name="customer3name">Mr. Rajesh Pandey</string>
    <string name="customer3num">+919839809393</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
