<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amaninfra.aman_infraventure.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:src="@drawable/background1a"-->
            <!--android:scaleType="fitXY"/>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companyname"
            android:textAllCaps="true"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:paddingTop="50dp" />

        <View
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"/>

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="200dp"-->
            <!--android:src="@drawable/logo_new" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hindislogan"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:padding="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/englishslogan"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutus"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textSize="20sp" />

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="We believe in making our customers happy and satisfied."
            android:gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:padding="15dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="~OUR CUSTOMERS SAY~"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCustomerSays"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_margin="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer1msg"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer1name"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:fontFamily="cursive"
                android:paddingLeft="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer1num"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:fontFamily="cursive"
                android:paddingLeft="20dp"
                android:textStyle="bold"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/customer1"
                android:padding="10dp"
                app:civ_border_color="#000"
                app:civ_border_width="2dp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCustomerSays"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_margin="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer2msg"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer2name"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:fontFamily="cursive"
                android:paddingLeft="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer2num"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:fontFamily="cursive"
                android:paddingLeft="20dp"
                android:textStyle="bold"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/customer_image_default"
                android:padding="10dp"
                app:civ_border_color="#000"
                app:civ_border_width="2dp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorCustomerSays"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_margin="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer3msg"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer3name"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:fontFamily="cursive"
                android:paddingLeft="20dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer3num"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:fontFamily="cursive"
                android:paddingLeft="20dp"
                android:textStyle="bold"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/customer3"
                android:padding="10dp"
                app:civ_border_color="#000"
                app:civ_border_width="2dp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>
    </RelativeLayout>
</ScrollView>
