<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amaninfra.aman_infraventure.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:layout_marginTop="2dp"
            android:id="@+id/linear_layout_lp1">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/arrow"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>
            <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="@style/projectText"
              android:text="@string/liveproject1"/>
        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/lp1a"
            android:id="@+id/image_lp1"/>
            <!--android:layout_marginBottom="12dp"-->
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:id="@+id/linear_layout_lp2">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/liveproject2"
            style="@style/projectText"/>
    </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:scaleType="centerCrop"
            android:src="@drawable/lp2a"
            android:id="@+id/image_lp2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:id="@+id/linear_layout_lp3">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/projectText"
            android:text="@string/liveproject3"/>
    </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:scaleType="centerCrop"
            android:src="@drawable/lp3a"
            android:id="@+id/image_lp3"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimary"
        android:id="@+id/linear_layout_lp4">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/projectText"
            android:text="@string/liveproject4" />
    </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:scaleType="centerCrop"
            android:src="@drawable/lp4a"
            android:id="@+id/image_lp4"
            android:layout_marginBottom="30dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>

</ScrollView>